tests/invalid/08_parametro_sin_tipo.mini0
// Parametro sin tipo

fun foo(x)
end